<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_button_text">Spotify Streamer</string>
    <string name="bib_button_text">Build It Bigger</string>
    <string name="football_button_text">Football Scores App</string>
    <string name="library_button_text">Library App</string>
    <string name="capstone_button_text">Capstone</string>
    <string name="xyz_button_text">XYZ Reader</string>
    <string name="main_title">My Nanodegree Aps!!!</string>
    <string name="spotify_streamer_toast_text">This button will launch my Spotify Streamer app</string>
    <string name="football_scores_toast_text">This button will launch my Football Scores app</string>
    <string name="library_toast_text">This button will launch my Library app</string>
    <string name="xyz_reader_toast_text">This button will launch my XYZ Reader app</string>
    <string name="build_it_bigger_toast_text">This button will launch my Build it Bigger app</string>
    <string name="capstone_toast_text">This button will launch my Capstone app</string>

</resources>
