<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/light_blue">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_title"
            android:id="@+id/app_title"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp">

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/spotify_button_text"
            android:id="@+id/spotify_streamer"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="showToastSpotify"
            android:background="@drawable/button_custom"
            android:layout_margin="@dimen/button_layout_margin"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:enabled="true" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/football_button_text"
            android:id="@+id/football_scores_app"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="showToastFootballScores"
            android:background="@drawable/button_custom"
            android:layout_margin="@dimen/button_layout_margin"
            android:clickable="true" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/library_button_text"
            android:id="@+id/library_app"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="showToastLibrary"
            android:background="@drawable/button_custom"
            android:layout_margin="@dimen/button_layout_margin"
            android:clickable="true" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/bib_button_text"
            android:id="@+id/build_it_bigger"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="showToastBuildItBigger"
            android:background="@drawable/button_custom"
            android:layout_margin="@dimen/button_layout_margin"
            android:clickable="true" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/xyz_button_text"
            android:id="@+id/xyz_reader"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="showToastXyzReader"
            android:background="@drawable/button_custom"
            android:layout_margin="@dimen/button_layout_margin"
            android:clickable="true" />

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/capstone_button_text"
            android:id="@+id/capstone"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="showToastCapstone"
            android:background="@drawable/button_custom"
            android:layout_margin="@dimen/button_layout_margin"
            android:clickable="true" />
    </LinearLayout>

</RelativeLayout>
